# ray_api

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  entrypoint  manage.py  pyproject.toml  requirements.txt
apps/api/: task.py  urls.py
apps/posts/: admin.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views.py
apps/posts/migrations/: 0001_initial.py  0002_initial.py  0003_post_theme.py  0004_delete_pexelsimage_remove_post_price.py  0005_alter_comment_options_alter_post_options_and_more.py
apps/users/: admin.py  forms.py  managers.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_birthday_alter_user_date_joined_and_more.py  0003_alter_user_options.py
config/: celery.py  settings.py  urls.py
ray_api/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
